feat!: tidy API endpoints